# caduceus

./: AGENTS.md  CNAME  DIRECTIVE.md  README.md  SIMPLICITY.md  config.yaml  fix_install.py  get.html  index.html  pricing.html  pyproject.toml  skill.html  update_skills.py
.github/workflows/: pages.yml
.hermes/plans/: 2026-03-19_124500-caduceus-build-plan.md
caduceus/: __init__.py
caduceus/db/: __init__.py  queries.py  schema.sql
caduceus/orchestrator/: __init__.py  core.py
caduceus/utils/: __init__.py  schedule_parser.py  threat_scan.py
css/: styles.css
docs/: SCHEMA.md  architecture.html  faq.html  getting-started.html  index.html  skills.html
js/: main.js
qmd-collections/agenda/: README.md
qmd-collections/agents/: README.md
qmd-collections/projects/: README.md
scripts/: bootstrap-registry.sh  install.sh  kairos-watchdog.sh  run-prompt.py
scripts/caduceus-api/: caduceus-api.service  caduceus-daemon.plist  caduceus-daemon.service  credits.py  daemon.py  dashboard.html  integrations.py  models.py  server.py  start-api.sh
scripts/caduceus-cloner/: build-cloner.sh  cloner-watchdog.sh  inspect-cloner.sh  qa-cloner.sh  start-cloner.sh
scripts/caduceus-qmd-mcp/: mcp_server.py
scripts/caduceus-research/: start-research.sh
scripts/caduceus-skill-synth/: start-synth.sh
scripts/ever-cli/: ever-server.js  ever.js  package-lock.json  package.json
skills/caduceus-browser/: SKILL.md
skills/caduceus-cloner/: SKILL.md
skills/caduceus-engineer/: SKILL.md
skills/caduceus-kairos/: SKILL.md
skills/caduceus-monitor/: SKILL.md
(+24 files in other folders)
