[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caduceus-qmd-mcp"
version = "0.1.0"
description = "QMD MCP server — exposes Caduceus Oracle/QMD as MCP tools for Hermes agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0", "caduceus-qmd @ git+https://github.com/mitchellbernstein/caduceus.git#subdirectory=python"]

[project.scripts]
caduceus-qmd-mcp = "caduceus_qmd_mcp.mcp_server:main"

[project.urls]
Homepage = "https://github.com/mitchellbernstein/caduceus"
Repository = "https://github.com/mitchellbernstein/caduceus"
